Generate .env file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=KAM
 
-# DataSource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/lead_management
-spring.datasource.username=postgres
-spring.datasource.password=12345678
-spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=${SERVER_PORT}
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=${DATABASE_DRIVER}
+
 
 # HikariCP configuration
 spring.datasource.hikari.minimum-idle=5
@@ -25,3 +27,12 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Debugging and logging (optional)
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+
+
+
+# DataSource configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/lead_management
+#spring.datasource.username=postgres
+#spring.datasource.password=12345678
+#spring.datasource.driver-class-name=org.postgresql.Driver
