--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=${SERVER_PORT}
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=${DATABASE_DRIVER}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # HikariCP configuration
