--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,85 @@
-spring.application.name=KAM
-
+spring.application.name=${SPRING_APPLICATION_NAME}
 server.port=${SERVER_PORT}
 
+# DataSource configuration
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME}
 
 # HikariCP configuration
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.pool-name=KAMHikariPool
+spring.datasource.hikari.minimum-idle=${DATASOURCE_HIKARI_MINIMUM_IDLE}
+spring.datasource.hikari.maximum-pool-size=${DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE}
+spring.datasource.hikari.idle-timeout=${DATASOURCE_HIKARI_IDLE_TIMEOUT}
+spring.datasource.hikari.connection-timeout=${DATASOURCE_HIKARI_CONNECTION_TIMEOUT}
+spring.datasource.hikari.pool-name=${DATASOURCE_HIKARI_POOL_NAME}
 
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${JPA_SHOW_SQL}
+spring.jpa.database-platform=${JPA_DATABASE_PLATFORM}
 
 # Swagger configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=${SWAGGER_API_DOCS_PATH}
+springdoc.swagger-ui.path=${SWAGGER_UI_PATH}
 
 # Debugging and logging (optional)
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=${LOGGING_LEVEL_ORG_HIBERNATE}
+logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWEB}
 
 
 
 
-# DataSource configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/lead_management
-#spring.datasource.username=postgres
-#spring.datasource.password=12345678
-#spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#spring.application.name=KAM
+#
+#server.port=${SERVER_PORT}
+#
+## DataSource configuration
+##spring.datasource.url=jdbc:postgresql://localhost:5432/lead_management
+##spring.datasource.username=postgres
+##spring.datasource.password=12345678
+##spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#
+## HikariCP configuration
+#spring.datasource.hikari.minimum-idle=5
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.idle-timeout=30000
+#spring.datasource.hikari.connection-timeout=20000
+#spring.datasource.hikari.pool-name=KAMHikariPool
+#
+## JPA and Hibernate configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#
+## Swagger configuration
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
+#
+## Debugging and logging (optional)
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.web=DEBUG
+#
+#
+#
+#
+#
