Update application.properties with path matching strategy

--- a/.env
+++ b/.env
@@ -1,28 +1,47 @@
 SPRING_APPLICATION_NAME=KAM
-SERVER_PORT=8080  # Or your preferred port
-
-# DataSource configuration
-DATABASE_URL=jdbc:postgresql://localhost:5432/lead_management
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=12345678
+SERVER_PORT=8080
+DATABASE_URL=jdbc:postgresql://ep-winter-hill-a5j27cdr.us-east-2.aws.neon.tech/lead_management?sslmode=require
+DATABASE_USERNAME=secureDB5_owner
+DATABASE_PASSWORD=fxWdl4OQ6tJb
 DATABASE_DRIVER_CLASS_NAME=org.postgresql.Driver
-
-# HikariCP configuration
 DATASOURCE_HIKARI_MINIMUM_IDLE=5
 DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE=10
 DATASOURCE_HIKARI_IDLE_TIMEOUT=30000
 DATASOURCE_HIKARI_CONNECTION_TIMEOUT=20000
 DATASOURCE_HIKARI_POOL_NAME=KAMHikariPool
-
-# JPA and Hibernate configuration
 JPA_HIBERNATE_DDL_AUTO=update
 JPA_SHOW_SQL=true
 JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
-
-# Swagger configuration
 SWAGGER_API_DOCS_PATH=/api-docs
 SWAGGER_UI_PATH=/swagger-ui.html
-
-# Debugging and logging (optional)
 LOGGING_LEVEL_ORG_HIBERNATE=DEBUG
 LOGGING_LEVEL_ORG_SPRINGFRAMEWEB=DEBUG
+
+#SPRING_APPLICATION_NAME=KAM
+#SERVER_PORT=8080  # Or your preferred port
+#
+## DataSource configuration
+#DATABASE_URL=jdbc:postgresql://localhost:5432/lead_management
+#DATABASE_USERNAME=postgres
+#DATABASE_PASSWORD=12345678
+#DATABASE_DRIVER_CLASS_NAME=org.postgresql.Driver
+#
+## HikariCP configuration
+#DATASOURCE_HIKARI_MINIMUM_IDLE=5
+#DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE=10
+#DATASOURCE_HIKARI_IDLE_TIMEOUT=30000
+#DATASOURCE_HIKARI_CONNECTION_TIMEOUT=20000
+#DATASOURCE_HIKARI_POOL_NAME=KAMHikariPool
+#
+## JPA and Hibernate configuration
+#JPA_HIBERNATE_DDL_AUTO=update
+#JPA_SHOW_SQL=true
+#JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
+#
+## Swagger configuration
+#SWAGGER_API_DOCS_PATH=/api-docs
+#SWAGGER_UI_PATH=/swagger-ui.html
+#
+## Debugging and logging (optional)
+#LOGGING_LEVEL_ORG_HIBERNATE=DEBUG
+#LOGGING_LEVEL_ORG_SPRINGFRAMEWEB=DEBUG
