--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,70 @@
-spring.application.name=${SPRING_APPLICATION_NAME}
-server.port=${SERVER_PORT}
+spring.application.name=${SPRING_APPLICATION_NAME:KAM}
+server.port=${SERVER_PORT:8080}
 
 # DataSource configuration
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/lead_management}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:12345678}
+spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME:org.postgresql.Driver}
 
 # HikariCP configuration
-spring.datasource.hikari.minimum-idle=${DATASOURCE_HIKARI_MINIMUM_IDLE}
-spring.datasource.hikari.maximum-pool-size=${DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE}
-spring.datasource.hikari.idle-timeout=${DATASOURCE_HIKARI_IDLE_TIMEOUT}
-spring.datasource.hikari.connection-timeout=${DATASOURCE_HIKARI_CONNECTION_TIMEOUT}
-spring.datasource.hikari.pool-name=${DATASOURCE_HIKARI_POOL_NAME}
+spring.datasource.hikari.minimum-idle=${DATASOURCE_HIKARI_MINIMUM_IDLE:5}
+spring.datasource.hikari.maximum-pool-size=${DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE:10}
+spring.datasource.hikari.idle-timeout=${DATASOURCE_HIKARI_IDLE_TIMEOUT:30000}
+spring.datasource.hikari.connection-timeout=${DATASOURCE_HIKARI_CONNECTION_TIMEOUT:20000}
+spring.datasource.hikari.pool-name=${DATASOURCE_HIKARI_POOL_NAME:KAMHikariPool}
 
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=${JPA_SHOW_SQL}
-spring.jpa.database-platform=${JPA_DATABASE_PLATFORM}
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.database-platform=${JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
 
 # Swagger configuration
-springdoc.api-docs.path=${SWAGGER_API_DOCS_PATH}
-springdoc.swagger-ui.path=${SWAGGER_UI_PATH}
+springdoc.api-docs.path=${SWAGGER_API_DOCS_PATH:/api-docs}
+springdoc.swagger-ui.path=${SWAGGER_UI_PATH:/swagger-ui.html}
 
 # Debugging and logging (optional)
-logging.level.org.hibernate=${LOGGING_LEVEL_ORG_HIBERNATE}
-logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWEB}
+logging.level.org.hibernate=${LOGGING_LEVEL_ORG_HIBERNATE:DEBUG}
+logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWEB:DEBUG}
 
+# Path Matching Strategy
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+
+
+
+#spring.application.name=${SPRING_APPLICATION_NAME}
+#server.port=${SERVER_PORT}
+#
+## DataSource configuration
+#spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME}
+#
+## HikariCP configuration
+#spring.datasource.hikari.minimum-idle=${DATASOURCE_HIKARI_MINIMUM_IDLE}
+#spring.datasource.hikari.maximum-pool-size=${DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE}
+#spring.datasource.hikari.idle-timeout=${DATASOURCE_HIKARI_IDLE_TIMEOUT}
+#spring.datasource.hikari.connection-timeout=${DATASOURCE_HIKARI_CONNECTION_TIMEOUT}
+#spring.datasource.hikari.pool-name=${DATASOURCE_HIKARI_POOL_NAME}
+#
+## JPA and Hibernate configuration
+#spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO}
+#spring.jpa.show-sql=${JPA_SHOW_SQL}
+#spring.jpa.database-platform=${JPA_DATABASE_PLATFORM}
+#
+## Swagger configuration
+#springdoc.api-docs.path=${SWAGGER_API_DOCS_PATH}
+#springdoc.swagger-ui.path=${SWAGGER_UI_PATH}
+#
+## Debugging and logging (optional)
+#logging.level.org.hibernate=${LOGGING_LEVEL_ORG_HIBERNATE}
+#logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWEB}
+#
+## Path Matching Strategy
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
 
